# webintel-ai

./: README.md
.github/workflows/: ci.yml
analysis/: llm.py
infrastructure/helm/webintel/: Chart.yaml  values.yaml
infrastructure/helm/webintel/templates/: service.yaml
monitors/: monitor.py  tasks.py
scheduler/: engine.py  job.py
services/app/: Dockerfile  alembic.ini  pyproject.toml
services/app/alembic/: env.py
services/app/alembic/versions/: 0001_initial.py
services/app/app/: __init__.py  dependencies.py  main.py
services/app/app/analysis/: __init__.py  interfaces.py  service.py
services/app/app/api/: __init__.py  dependencies.py  schemas.py
services/app/app/api/routers/: __init__.py  dashboard.py  health.py  jobs.py  metrics.py  monitors.py  tasks.py
services/app/app/core/: __init__.py  config.py  logger.py  metrics.py  settings.py
services/app/app/db/: __init__.py  base.py  interfaces.py  models.py  session.py
services/app/app/monitors/: __init__.py  interfaces.py
services/app/app/scheduler/: __init__.py  interfaces.py
services/app/app/services/: executor.py  monitoring.py  repositories.py  scheduler.py
services/app/tests/: conftest.py  test_api.py  test_dashboard.py  test_executor.py  test_monitoring.py  test_scheduler.py
